# pg_doorman

./: .dockerignore  .gitignore  404.html  BINARY_UPGRADE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ubuntu22-tls  INCIDENT_2026-05-03_3.5.2_large_result_leak.md  Makefile  README.md  benchmarks.html  build.rs  changelog.html  comparison.html  docker-compose-tests.mk  docker-compose.yaml  flake.nix  index.html  index.md.bak  patroni_proxy.yaml  pg_doorman.service  pg_doorman.toml  pg_doorman.yaml  pool_coordinator.md  pool_coordinator_ru.md  prepared_cache.md  print.html  searchindex.js  searchindex.json  toc.html  toc.js  versions.json
.githooks/: pre-commit
1.8.2/: 404.html  index.html  sitemap.xml
1.8.3/: 404.html  index.html  sitemap.xml
1.9.0/: 404.html  index.html  sitemap.xml
2.0.0/: 404.html  index.html  sitemap.xml
2.0.1/: 404.html  index.html  sitemap.xml
2.1.0/: sitemap.xml
2.2.0/: 404.html  index.html  sitemap.xml
2.2.1/: sitemap.xml
2.2.2/: sitemap.xml
2.4.0/: 404.html  index.html  sitemap.xml
2.4.1/: 404.html  index.html  sitemap.xml
2.4.2/: 404.html  index.html  sitemap.xml
2.4.3/: 404.html  index.html  sitemap.xml
2.5.0/: 404.html  index.html  sitemap.xml
3.0.0/: 404.html  index.html  sitemap.xml
3.0.1/: 404.html  index.html  sitemap.xml
3.0.2/: 404.html  index.html  sitemap.xml
3.0.3/: 404.html  index.html  sitemap.xml
3.0.4/: 404.html  index.html  sitemap.xml
3.0.5/: 404.html  index.html  sitemap.xml
3.1.0/: 404.html  index.html  sitemap.xml
3.1.2/: 404.html  index.html  sitemap.xml
3.1.4/: 404.html  index.html  sitemap.xml
3.1.5/: 404.html  index.html  sitemap.xml
3.1.6/: 404.html  index.html  sitemap.xml
3.1.7/: 404.html  index.html  sitemap.xml
3.1.8/: 404.html  index.html  sitemap.xml
3.2.0/: 404.html  index.html  sitemap.xml
3.2.2/: 404.html  index.html  sitemap.xml
3.2.3/: 404.html  index.html  sitemap.xml
3.2.4/: 404.html  index.html  sitemap.xml
authentication/: auth-query.html  hba.html  jwt.html  overview.html  pam.html  passthrough.html  talos.html
benches/: bench.feature  budget_benchmarks.rs  cache_benchmarks.rs  compute_percentiles.py  coordinator_benchmarks.rs  hash_benchmarks.rs  log_benchmarks.rs  memory_benchmarks.rs  parse-bench-logs.py  pool_anticipation_benchmarks.rs  render_charts.py  run-bench-and-upload.sh  setup-and-run-bench.sh  test_compute_percentiles.py  test_parse_bench_logs.py  test_render_charts.py
concepts/: pool-coordinator.html  pool-modes.html
debian/: control  copyright  rules
doc/: config.md  usage.md
documentation/: build.sh  mkdocs.yml
example/: docker-compose.yaml
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_startup.rs  fuzz_target_1.rs
grafana/: README.md  generate_dashboard.py  pg_doorman.json
guides/: tls.html  web-ui.html
observability/: admin-commands.html  json-logging.html  percentiles.html
operations/: fastpath-large-objects.html  monitoring-interner.html  signals.html
patches/openssl-src/: .gitignore  Cargo.toml
patches/openssl-src/patches/: 001-tls-migration.patch
patches/openssl-src/src/: lib.rs
pkg/: Dockerfile.bench  make_vendor_license.py
reference/: general.html  pool.html  prometheus.html
ru/: 404.html  benchmarks.html  changelog.html  comparison.html  index.html  index.md.bak  print.html  searchindex.js  (+3 more)
(+1164 files in other folders)
