[package]
name = "pg_doorman"
version = "3.1.0"
edition = "2021"
rust-version = "1.87.0"
license = "MIT"


[profile.release]
codegen-units = 1
lto = true

[dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads_runtime_support"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "std"]}
log = "0.4.27"
clap = { version = "4.5.37", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0.140"
serde_yaml = "0.9"
ipnet = { version = "2.11.0", features = ["serde"] }
once_cell = "1.21.3"
quanta = "0.12"
arc-swap = "1.7.1"
toml = "0.8"
prometheus = "0.14.0"
tokio = { version = "1.48.4", features = ["rt-multi-thread", "fs", "parking_lot", "sync", "io-util", "net", "macros", "signal", "time"] }
exitcode = "1.1.2"
pin-project = "1"
bytes = "1.10.1"
md-5 = "0.10"
socket2 = { version = "0.6.1", features = ["all"] }
chrono = "0.4"
rand = "0.9.1"
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
stringprep = "0.1"
nix = { version = "0.30.1", features = ["process", "signal"] }
sha-1 = "0.10"
lru = "0.14.0"
scopeguard = "1.2"
parking_lot = {version = "0.12.1", features = ["hardware-lock-elision"]}
libc = "0.2.172"
num_cpus = "1.16.0"
syslog = "7.0.0"
native-tls = { version = "0.2.14" }
tokio-native-tls = { version = "0.3.1" }
serde-toml-merge = { version = "0.3.8"}
jwt = { version = "0.16.0", features = ["openssl"] }
openssl = { version = "0.10.72"}
iota = { version = "0.2.3" }
pin-project-lite = "0.2.16"
pam-client = { version =  "0.5.0", optional = true }
postgres = "0.19.10"
postgres-native-tls = "0.5.1"
flate2 = "1.0.28"
zerocopy = "0.8.24"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
ahash = "0.8"
dashmap = "6.1"
reqwest = { version = "0.11", features = ["json"] }
hdrhistogram = "7.5"

[replace]
'native-tls:0.2.14' = {path = 'patches/rust-native-tls'}

[dev-dependencies]
cucumber = "0.21"
tempfile = "3"
portpicker = "0.1"
tokio-postgres = "0.7"
criterion = "0.5"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
serial_test = "3"

[[bin]]
name = "pg_doorman"
path = "src/main.rs"

[[bin]]
name = "patroni_proxy"
path = "src/bin/patroni_proxy/main.rs"

[[test]]
name = "bdd"
harness = false
path = "tests/bdd/main.rs"

[[test]]
name = "patroni_proxy_bdd"
harness = false
path = "src/bin/patroni_proxy/tests/bdd/main.rs"

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
default = []
pam = ["dep:pam-client"]
